Login endpoint added

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://robertfacundo:passwordDB@cluster0.tbzxf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
+JWT_SECRET=MI_CLAVE_SUPER_SECRETA_Y_COMPLEJA_DE_32_CARACTERES_O_MAS
